--- a/environment.yml
+++ b/environment.yml
@@ -3,27 +3,19 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=2.7
-  - cmocean
-  - fiona
-  - gdal
-  - geopandas
-  - ipympl
+  - python
   - jupyter
-  - kiwisolver
-  - krb5
-  - matplotlib
-  - nb_conda_kernels
-  - netcdf4
-  - numpy
   - pandas
-  - scipy
-  - seaborn
-  - xarray
   - xlrd
+  - geopandas
+  - netcdf4
+  - xarray
+  - scipy
+  - matplotlib
+  - descartes
+  - ipympl
+  - seaborn
+  - cmocean
   - pip
   - pip:
     - quilt
-    
-prefix: /Users/hannah/miniconda3/envs/hires
-
