didn't seem to change binder build time, so may as well have the sink

--- a/environment.yml
+++ b/environment.yml
@@ -6,8 +6,16 @@ dependencies:
   - python
   - jupyter
   - pandas
+  - xlrd
   - geopandas
+  - netcdf4
+  - xarray
+  - scipy
   - matplotlib
-  - ipympl
   - descartes
+  - ipympl
   - seaborn
+  - cmocean
+  - pip
+  - pip:
+    - quilt
