--- a/.github/workflows/binder.yaml
+++ b/.github/workflows/binder.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: checkout files in repo
+    - name: checkout code 
       uses: actions/checkout@master
 
     - name: update jupyter dependencies with repo2docker
@@ -14,3 +14,4 @@ jobs:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         BINDER_CACHE: true
+        PUBLIC_REGISTRY_CHECK: true
