--- a/.github/workflows/binder.yaml
+++ b/.github/workflows/binder.yaml
@@ -7,6 +7,8 @@ jobs:
 
     - name: checkout code 
       uses: actions/checkout@master
+      with:
+        ref: ${{ github.event.pull_request.head.sha }}
 
     - name: update jupyter dependencies with repo2docker
       uses: machine-learning-apps/repo2docker-action@master
