--- a/.github/workflows/binder.yaml
+++ b/.github/workflows/binder.yaml
@@ -17,3 +17,4 @@ jobs:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         BINDER_CACHE: true
         PUBLIC_REGISTRY_CHECK: true
+        Image_Name: "story645/EAS213"
