--- a/.github/workflows/binder.yaml
+++ b/.github/workflows/binder.yaml
@@ -17,4 +17,4 @@ jobs:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         BINDER_CACHE: true
         PUBLIC_REGISTRY_CHECK: true
-        Image_Name: "story645/EAS213"
+        IMAGE_NAME: "story645/EAS213"
