--- a/.github/workflows/binder.yaml
+++ b/.github/workflows/binder.yaml
@@ -13,8 +13,8 @@ jobs:
     - name: update jupyter dependencies with repo2docker
       uses: machine-learning-apps/repo2docker-action@0.2
       with:
+        IMAGE_NAME: "story645/repo2docker-test"
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         BINDER_CACHE: true
         PUBLIC_REGISTRY_CHECK: true
-        IMAGE_NAME: "story645/EAS213"
